api gateway/api-gateway-authentication/keycloack/reqauth.yaml
apiVersion: security.istio.io/v1
kind: RequestAuthentication
metadata:
  name: "jwt-example"
  namespace: istio-system
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: "http://localhost:7071/realms/master"
    jwksUri: "http://10.101.55.9:80/realms/master/protocol/openid-connect/certs"
