api gateway/api-gateway-authentication/keycloack/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicea-service
spec:
  selector:
    app: service-a
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: serviceb-service
spec:
  selector:
    app: service-b
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
