api gateway/api-gateway-authentication/keycloack/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-a
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: servicea-service
        port:
          number: 80
    match:
    - uri:
        prefix: /servicea/
    rewrite:
      uri: /


---


apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vs-b
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - route:
    - destination:
        host: serviceb-service
        port:
          number: 80
    match:
    - uri:
        prefix: /serviceb/
    rewrite:
      uri: /
